--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage" : "http://pkakkera-dev.github.io/react-redux-app",
+  "homepage": "http://pkakkera-dev.github.io/react-redux-app",
   "name": "react-redux-app",
   "version": "0.1.0",
   "private": true,
@@ -37,5 +37,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.2.0"
   }
 }
